--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -53,30 +53,27 @@
                             <ul class="collapsible">
                                 <li>
 
-                                <div class="collapsible-header"><i class="material-icons">whatshot</i>One time donation!
+                                {{!-- <div class="collapsible-header"><i class="material-icons">whatshot</i>One time donation!
                                 
                                   <div class="form-field center">
                     </div>
                     <br>
-                    <br>
-                    <form id="donate-amount">
-                    <div class="form-field">
-                        <label for="donating">I'd like to donate this amount:</label>
-                        <input type="text" id="donationAmount">
-                    </div>
-                    <button class="btn-large waves-effect waves-dark green" id="tripSubmit"
-                        style="width: 100%;">Save this to my profile</button>
-                        <a href="https://standfortrees.org"
-                            class=" center btn-large waves-effect waves-light green lighten-1">Donate</a>
+                    <br> --}}
+                    
 
-                                <div>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</div><div style="color: green">You have donated {{donated}}&nbspDollars</div>
+                                {{!-- <div>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</div><div style="color: green">You have donated {{donated}}&nbspDollars</div>
                                 </div>
-                                <div class="collapsible-body"><span></span></div>
+                                <div class="collapsible-body"><span></span></div> --}}
 
-                                <div class="collapsible-header"><i class="material-icons">whatshot</i>One time donation!<div>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</div><div style="color: green">You have donated {{donated}}&nbspDollars</div>
+                                <div class="collapsible-header"><i class="material-icons">whatshot</i>One time donation!<div>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</div><div style="color: green" id="updateDonation">You have donated {{donated}}&nbspDollars</div>
                                 </div>
-                                <div class="collapsible-body"><span></span></div>
-
+                                <div class="collapsible-body"><span>     <form id="donate-amount">
+                                    <div class="form-field">
+                                        <label for="donating">I'd like to donate this amount:</label>
+                                        <input type="text" id="donationAmount">
+                                    </div>
+                                    <button class="profileDonate center btn-large waves-effect waves-light green lighten-1">Donate</button>
+                               
                                 </li>
                                 <li>
                                 <div class="collapsible-header"><i class="material-icons">directions_car</i>{{#if car}}Update car</a>{{else}}Add car</a>{{/if}}<div>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</div><div id="current-car" style="color: green">{{car}}</div></div>
@@ -116,7 +113,6 @@
             </div>
         </div>
     </div>
-    <
 
 <script type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6YDdaRNCGktlvWISrGBjv75lcHfR-l44&libraries=places">
@@ -354,4 +350,19 @@
             };         
         });
     });
+
+  $(".profileDonate").click(function(){
+      event.preventDefault();
+      $.ajax({
+           url: "/createDonation",
+           method: "POST",
+           data: {
+            money: $("#donationAmount").val()
+           }
+       }).then(function(response){
+           console.log("done");
+       })
+        window.open("https://www.standfortrees.org");
+    });
+
 </script>
