--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -30,11 +30,11 @@
                 <form id="find-trip-info">
                     <div class="form-field">
                         <label for="departcity">Departing City</label>
-                        <input type="text" id="departcity">{{cityOne}}
+                        <input type="text" id="departcity" ><p id='startcityp'>{{cityOne}}</p>
                     </div><br>
                      <div class="form-field">
                         <label for="arrivecity">Arrival City</label>
-                        <input type="text" id="arrivecity">{{cityTwo}}
+                        <input type="text" id="arrivecity" data-city={{cityTwo}}><p id='endcityp'>{{cityTwo}}</p>
                     </div><br>
                     <button class="btn-large waves-effect waves-dark green" id="tripSubmit"
                         style="width: 100%;">Submit</button>
@@ -119,7 +119,6 @@
 
                         <p>
                             <label>
-
                                 <span style="color: rgb(12, 56, 12);">
                                     TOTAL: <br>
                                     Transportation: <div id="vehicle">{{type}}</div>
@@ -129,14 +128,13 @@
                         
                                     <span style="color: rgb(12, 56, 12);">
                                         <i class="fas fa-road"></i>:
-                                        {{tripDistance}} mi
+                                        {{selectedTripDistance}} mi
                                     </span>
                                     <br>
                                     <span style="color: rgb(12, 56, 12);">
                                         <i class="far fa-clock"></i>: {{my_tripTime}}hrs
                                     </span>
                                    
-
                             </label>
                         </p>
                         <br>
@@ -145,7 +143,6 @@
                         <br>
 
                         <div class="form-field center">
-
                             <label for="donating">I chose to donate this amount:</label>
                             <input type="number" id="chosenDonation">
                             <button class="center btn-large waves-effect waves-light green lighten-1" id="step2Submit"
@@ -161,10 +158,7 @@
                     <div class="form-field center">
                         <button class="donate-btn btn-large center waves-effect waves-dark green"
                             style="width: 100%;">Donate</button>
-
                     </div>
-                    <button class="btn-large waves-effect waves-dark green" id="tripSubmit"
-                        style="width: 100%;">Save this to my profile</button>
 
                 </form>   
                     </div>
@@ -186,7 +180,7 @@
                                 </div>
                         </div>
                 </div>
-            <div class="parallax"><img src="img/sky-forest.jpg" alt="Unsplashed background img 2"></div>
+            <div class="parallax"><img src="/img/sky-forest.jpg" alt="Unsplashed background img 2"></div>
         </div>
 
 <script type="text/javascript"
